Fix overflow

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,6 +14,10 @@ html, body {
     scroll-behavior: smooth;
     font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
 }
+
+#root {
+    overflow-x: hidden;
+}
  
 header {
     background-color: var(--bg-color);
@@ -53,12 +57,15 @@ main {
     height: 90vh;
     display: flex;
     flex-wrap: wrap;
+    overflow: hidden;
 }
 
 main .hero {
     display: flex;
     flex-wrap: wrap;
     flex-basis: 100%;
+    overflow: hidden;
+    justify-content: center;
 }
 
 main .hero #canvas {
@@ -67,6 +74,8 @@ main .hero #canvas {
     flex-basis: 40%;
     align-content: center;
     justify-content: center;
+    overflow: hidden;
+    background-color: white;
 }
 
 main .hero .hero-card {
